# app/Http/Requests/ProfileRequest.php
@@ -1,0 +1,37 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+/**
+ * @OA\Schema(
+ *     title="Edit Profile request",
+ *     description="Profile change request body data",
+ *     type="object",
+ *     required={"display_name", "email"}
+ * )
+ */
+class ProfileRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'display_name' => 'string|max:255',
+            'email' => 'email|unique:users,email,' ,
+        ];
+    }
+}
